--- a/restaurants/la_note_enchantee.html
+++ b/restaurants/la_note_enchantee.html
@@ -12,14 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
-    <!-- Project built-in CSS -->
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/features.css" />
-    <link rel="stylesheet" href="../css/restaurants_list.css" />
-    <link rel="stylesheet" href="../css/restaurants_menus.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
-    <link rel="stylesheet" href="../css/responsive.css" />
+    <!-- Project's built-in CSS files  -->
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/loader.css" />
+    <link rel="stylesheet" href="css/heart-icon.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/features.css" />
+    <link rel="stylesheet" href="css/restaurants_list.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
     <!--
@@ -241,7 +241,7 @@
               </div> <!-- /.__icon -->
             </article> <!-- /.menu-item -->
           </div> <!-- /.menu-category -->
-        </div> <!-- /.container-d-flex --> 
+        </div> <!-- /.container-d-flex -->
         <!--
             Buy button
         -->
