--- a/restaurants/la_palette_du_gout.html
+++ b/restaurants/la_palette_du_gout.html
@@ -13,13 +13,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
-    <!-- Project built-in CSS -->
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/features.css" />
-    <link rel="stylesheet" href="../css/restaurants_list.css" />
-    <link rel="stylesheet" href="../css/restaurants_menus.css" />
-    <link rel="stylesheet" href="../css/footer.css" />
+    <!-- Project's built-in CSS files  -->
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/loader.css" />
+    <link rel="stylesheet" href="css/heart-icon.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/features.css" />
+    <link rel="stylesheet" href="css/restaurants_list.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
     <!--
@@ -234,14 +235,13 @@
                 </article> <!-- /.menu-item -->
               </div> <!-- /.container-d-flex -->
             </div> <!-- / menu-list -->
+            <!--
+                Buy button
+            -->
+            <p class="action-button-container">
+              <a class="action-button-container-a">Commander</a>
+            </p> <!-- /explore-btn-container -->
           </div> <!-- /.menu-category -->
-          <!--
-              Buy button
-          -->
-          <p class="action-button-container">
-            <a class="action-button-container-a">Commander</a>
-          </p> <!-- /explore-btn-container -->
-
         </section> <!-- /.menu -->
     </main>
     <!--
