:fix: fixed padding on homepage

--- a/index.html
+++ b/index.html
@@ -129,11 +129,7 @@
           </article> <!-- /.restaurant -->
       </section> <!-- /.restaurants -->
     </main>
-    <!--
-
-        Footer
-
-    -->
+    <!-- Footer -->
     <footer>
       <h1 class="footer-title-h1">ohmyfood</h1>
       <ul class="footer-links-list-ul">
