:fix: now works on all screens type

--- a/index.html
+++ b/index.html
@@ -73,71 +73,77 @@
       <!-- """ Restaurants list """ section -->
       <section class="restaurants overall-padding">
         <h2 class="overall-section-titles">Restaurants</h2>
-          <!-- La palette du gout -->
-          <article class="restaurant">
-            <div class="card card-restaurant">
-              <div class="new">Nouveau</div>
-              <img src="assets/restaurants/la_palette_du_gout.jpg" />
-              <div class="flex">
-                <div>
-                  <h3><a class="link-black no-decoration" href="restaurants/la_palette_du_gout.html">La palette du gout</a></h3>
-                  <p>Ménilmontant</p>
+        <div class="mrg-auto-container">
+            <div class="restaurants-container">
+              <!-- La palette du gout -->
+              <article class="restaurant mrg-md-right">
+                <div class="card card-restaurant">
+                  <div class="new">Nouveau</div>
+                  <img src="assets/restaurants/la_palette_du_gout.jpg" />
+                  <div class="flex">
+                    <div>
+                      <h3><a class="link-black no-decoration" href="restaurants/la_palette_du_gout.html">La palette du gout</a></h3>
+                      <p>Ménilmontant</p>
+                    </div>
+                    <div><i class="fa-regular fa-heart"></i></div>
+                  </div> <!-- /.flex -->
+                </div> <!-- /.card-restaurant -->
+              </article> <!-- /.restaurant -->
+              <!-- La note enchantée -->
+              <article class="restaurant">
+                <div class="card card-restaurant">
+                  <div class="new">Nouveau</div>
+                  <img src="assets/restaurants/la_note_enchantee.jpg" alt="la note enchantée" />
+                  <div class="flex">
+                    <div>
+                      <h3><a class="link-black no-decoration" href="restaurants/la_note_enchantee.html">La note enchantée</a></h3>
+                      <p>Charonne</p>
+                    </div>
+                    <div><i class="fa-regular fa-heart"></i></div>
+                  </div> <!-- /.flex -->
+                </div> <!-- /.card -->
+              </article> <!-- /.restaurant -->
+              <!-- A la française -->
+              <article class="restaurant mrg-md-right">
+                <div class="card card-restaurant">
+                  <img src="assets/restaurants/a_la_francaise.jpg" alt="retaurant a la française" />
+                  <div class="flex">
+                    <div>
+                      <h3><a class="link-black no-decoration" href="restaurants/a_la_francaise.html">A la française</a></h3>
+                      <p>Cité Rouge</p>
+                    </div>
+                    <div><i class="fa-regular fa-heart"></i></div>
+                  </div> <!-- /.flex -->
                 </div>
-                <div><i class="fa-regular fa-heart"></i></div>
-              </div> <!-- /.flex -->
-            </div> <!-- /.card-restaurant -->
-          </article> <!-- /.restaurant -->
-          <!-- La note enchantée -->
-          <article class="restaurant">
-            <div class="card card-restaurant">
-              <div class="new">Nouveau</div>
-              <img src="assets/restaurants/la_note_enchantee.jpg" alt="la note enchantée" />
-              <div class="flex">
-                <div>
-                  <h3><a class="link-black no-decoration" href="restaurants/la_note_enchantee.html">La note enchantée</a></h3>
-                  <p>Charonne</p>
+              </article> <!-- /.restaurant -->
+              <!-- Le délice des sens -->
+              <article class="restaurant">
+                <div class="card card-restaurant">
+                  <img src="assets/restaurants/le_delice_des_sens.jpg" alt="le delice des sens" />
+                  <div class="flex">
+                    <div>
+                      <h3><a class="link-black no-decoration" href="restaurants/le_delice_des_sens.html">Le délice des sens</a></h3>
+                      <p>Folie Méricourt</p>
+                    </div>
+                    <div><i class="fa-regular fa-heart"></i></div>
+                  </div> <!-- /.flex -->
                 </div>
-                <div><i class="fa-regular fa-heart"></i></div>
-              </div> <!-- /.flex -->
-            </div> <!-- /.card -->
-          </article> <!-- /.restaurant -->
-          <!-- A la française -->
-          <article class="restaurant restaurant-mrg">
-            <div class="card card-restaurant">
-              <img src="assets/restaurants/a_la_francaise.jpg" alt="retaurant a la française" />
-              <div class="flex">
-                <div>
-                  <h3><a class="link-black no-decoration" href="restaurants/a_la_francaise.html">A la française</a></h3>
-                  <p>Cité Rouge</p>
-                </div>
-                <div><i class="fa-regular fa-heart"></i></div>
-              </div> <!-- /.flex -->
-            </div>
-          </article> <!-- /.restaurant -->
-          <!-- Le délice des sens -->
-          <article class="restaurant">
-            <div class="card card-restaurant">
-              <img src="assets/restaurants/le_delice_des_sens.jpg" alt="le delice des sens" />
-              <div class="flex">
-                <div>
-                  <h3><a class="link-black no-decoration" href="restaurants/le_delice_des_sens.html">Le délice des sens</a></h3>
-                  <p>Folie Méricourt</p>
-                </div>
-                <div><i class="fa-regular fa-heart"></i></div>
-              </div> <!-- /.flex -->
-            </div>
-          </article> <!-- /.restaurant -->
+              </article> <!-- /.restaurant -->
+           </div> <!-- /.restaurants-container -->
+         </div> <!-- /. mrg-auto-container -->
       </section> <!-- /.restaurants -->
     </main>
     <!-- Footer -->
     <footer>
-      <h1 class="footer-title-h1">ohmyfood</h1>
-      <ul class="footer-links-list-ul">
-        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-utensils"></i>Poposer un restaurant</li>
-        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-        <li class="footer-links-list-li">Mentions légales</li>
-        <li class="footer-links-list-li">Contact</li>
-      </ul>
+      <div class="mrg-auto-container">
+        <h1 class="footer-title-h1">ohmyfood</h1>
+        <ul class="footer-links-list-ul">
+          <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-utensils"></i>Poposer un restaurant</li>
+          <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+          <li class="footer-links-list-li">Mentions légales</li>
+          <li class="footer-links-list-li">Contact</li>
+        </ul>
+      </div> <!-- /.mrg-auto-container -->
     </footer>
   </body>
 </html>
