--- a/restaurants/a_la_francaise.html
+++ b/restaurants/a_la_francaise.html
@@ -15,11 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Project's built-in CSS files  -->
     <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="../css/loader.css" />
     <link rel="stylesheet" href="../css/heart-icon.css" />
     <link rel="stylesheet" href="../css/header.css" />
     <link rel="stylesheet" href="../css/features.css" />
-    <link rel="stylesheet" href="../css/restaurants_list.css" />
+    <link rel="stylesheet" href="../css/restaurants_menus.css" />
     <link rel="stylesheet" href="../css/footer.css" />
   </head>
   <body>
@@ -42,198 +41,201 @@
       -->
 
       <section class="menu">
-        <div class="menu-container">
-          <img class="menu-card__img" src="../assets/restaurants/a_la_francaise.jpg" alt="Image de nourriture" />
+        <div class="mrg-auto-container">
+          <div class="menu-container">
+            <img class="menu-card__img" src="../assets/restaurants/a_la_francaise.jpg" alt="Image de nourriture" />
+              <!--
+
+                Restaurant title
+
+              -->
+              <div class="menu-card__title-container">
+                <h2 class="menu-card__title">A la française</h2>
+                <i class="menu-card__heart-icon fa-regular fa-heart"></i>
+              </div> <!-- ./.menu_conttainer__card-title -->
+
             <!--
 
-              Restaurant title
+                Restaurant menu category "" entrées ""
 
             -->
-            <div class="menu-card__title-container">
-              <h2 class="menu-card__title">A la française</h2>
-              <i class="menu-card__heart-icon fa-regular fa-heart"></i>
-            </div> <!-- ./.menu_conttainer__card-title -->
-          </div> <!-- /.menu-container -->
-          <!--
+            <div class="container-d-flex">
+              <div class="menu-category">
+                <div class="category overall-restaurant-pres-margin">
+                  Entrées
+                  <div class="category__line overall-restaurant-pres-margin"></div>
+                </div> <!-- /.menu-card-category-div -->
 
-              Restaurant menu category "" entrées ""
+                <!-- Entrée #1 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Tartare de poulpe acidulé</span>
+                    <div class="menu-item__subtitle">
+                      Aux zests d'orange
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">25€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-          -->
-          <div class="container-d-flex">
-            <div class="menu-category">
-              <div class="category overall-restaurant-pres-margin">
-                Entrées
-                <div class="category__line overall-restaurant-pres-margin"></div>
-              </div> <!-- /.menu-card-category-div -->
+                <!-- Entrée #2 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Velouté de légumes d'antan</span>
+                    <div class="menu-item__subtitle">
+                      Carrote, panais, topinambour
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">25€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              <!-- Entrée #1 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Tartare de poulpe acidulé</span>
-                  <div class="menu-item__subtitle">
-                    Aux zests d'orange
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">25€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+                <!-- Entrée #3 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Soupe à l'oignon</span>
+                    <div class="menu-item__subtitle">
+                      Revisitée
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">20€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
+              </div> <!-- /.menu-category -->
 
-              <!-- Entrée #2 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Velouté de légumes d'antan</span>
-                  <div class="menu-item__subtitle">
-                    Carrote, panais, topinambour
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">25€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+              <div class="menu-category">
+                <!--
 
-              <!-- Entrée #3 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Soupe à l'oignon</span>
-                  <div class="menu-item__subtitle">
-                    Revisitée
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">20€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
-            </div> <!-- /.menu-category -->
+                      Restaurant menu "" plats ""
 
-            <div class="menu-category">
-              <!--
+                -->
+                <div class="category overall-restaurant-pres-margin">
+                  Plats
+                  <div class="category__line overall-restaurant-pres-margin"></div>
+                </div> <!-- /.menu-card-category-div -->
 
-                    Restaurant menu "" plats ""
+                <!-- Plat #1 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Coquilles Saint-Jacques</span>
+                    <div class="menu-item__subtitle">
+                      Accompagnées d'une purée de panais
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">25€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              -->
-              <div class="category overall-restaurant-pres-margin">
-                Plats
-                <div class="category__line overall-restaurant-pres-margin"></div>
-              </div> <!-- /.menu-card-category-div -->
+                <!-- Plat #2 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Magret de canard</span>
+                    <div class="menu-item__subtitle">
+                       Et parmentier de pommes de terres
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">35€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              <!-- Plat #1 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Coquilles Saint-Jacques</span>
-                  <div class="menu-item__subtitle">
-                    Accompagnées d'une purée de panais
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">25€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+                <!-- Plat #3 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Pigeonneau d'Ile-et-Vilaine</span>
+                    <div class="menu-item__subtitle">
+                       Sur son lit de gnocchis aux légumes
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">44€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
+              </div> <!-- /.menu-category -->
 
-              <!-- Plat #2 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Magret de canard</span>
-                  <div class="menu-item__subtitle">
-                     Et parmentier de pommes de terres
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">35€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
+              <div class="menu-category">
+                <!--
 
-              <!-- Plat #3 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Pigeonneau d'Ile-et-Vilaine</span>
-                  <div class="menu-item__subtitle">
-                     Sur son lit de gnocchis aux légumes
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">44€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
-            </div> <!-- /.menu-category -->
+                      Restaurant menu "" desserts ""
 
-            <div class="menu-category">
-              <!--
+                -->
+                <div class="category overall-restaurant-pres-margin">
+                  Desserts
+                  <div class="category__line overall-restaurant-pres-margin"></div>
+                </div> <!-- /.menu-card-category-div -->
 
-                    Restaurant menu "" desserts ""
+                <!-- Dessert #1 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Pétales de violettes glaçées</span>
+                    <div class="menu-item__subtitle">
+                       Et purée de noisettes
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">18€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              -->
-              <div class="category overall-restaurant-pres-margin">
-                Desserts
-                <div class="category__line overall-restaurant-pres-margin"></div>
-              </div> <!-- /.menu-card-category-div -->
+                <!-- Dessert #2 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Fondant au chocolat</span>
+                    <div class="menu-item__subtitle">
+                       Revisité
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">22€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
 
-              <!-- Dessert #1 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Pétales de violettes glaçées</span>
-                  <div class="menu-item__subtitle">
-                     Et purée de noisettes
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">18€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
-
-              <!-- Dessert #2 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Fondant au chocolat</span>
-                  <div class="menu-item__subtitle">
-                     Revisité
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">22€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
-
-              <!-- Dessert #3 -->
-              <article class="menu-item card d-flex">
-                <div class="menu-item__title">
-                  <span class="text-medium">Tiramisu</span>
-                  <div class="menu-item__subtitle">
-                     Myrtilles et pâte d'amande
-                  </div> <!-- /.subtitle -->
-                </div> <!-- ./__title -->
-                <div class="menu-item__price">
-                  <span class="text-medium">23€</span>
-                </div> <!-- /__price -->
-                <div class="menu-item__icon">
-                  <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
-                </div> <!-- /.__icon -->
-              </article> <!-- /.menu-item -->
-            </div> <!-- /.menu-category -->
+                <!-- Dessert #3 -->
+                <article class="menu-item card d-flex">
+                  <div class="menu-item__title">
+                    <span class="text-medium">Tiramisu</span>
+                    <div class="menu-item__subtitle">
+                       Myrtilles et pâte d'amande
+                    </div> <!-- /.subtitle -->
+                  </div> <!-- ./__title -->
+                  <div class="menu-item__price">
+                    <span class="text-medium">23€</span>
+                  </div> <!-- /__price -->
+                  <div class="menu-item__icon">
+                    <i class="card-restaurant-check-i fa-sharp fa-solid fa-circle-check"></i>
+                  </div> <!-- /.__icon -->
+                </article> <!-- /.menu-item -->
+               </div> <!-- /.menu-category -->
+              </div> <!-- /.menu-container -->
+            </div> <!-- /.mrg-auto-container -->
           </div> <!-- /.container-d-flex -->
 
           <!--
@@ -250,13 +252,15 @@
 
     -->
     <footer>
-      <h1 class="footer-title-h1">ohmyfood</h1>
-      <ul class="footer-links-list-ul">
-        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-utensils"></i>Poposer un restaurant</li>
-        <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-        <li class="footer-links-list-li">Mentions légales</li>
-        <li class="footer-links-list-li">Contact</li>
-      </ul>
+      <div class="mrg-auto-container">
+        <h1 class="footer-title-h1">ohmyfood</h1>
+        <ul class="footer-links-list-ul">
+          <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-utensils"></i>Poposer un restaurant</li>
+          <li class="footer-links-list-li"><i class="footer-icon-i fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+          <li class="footer-links-list-li">Mentions légales</li>
+          <li class="footer-links-list-li">Contact</li>
+        </ul>
+      </div> <!-- ./mrg-auto-container -->
     </footer>
   </body>
 </html>
